tests/errors/deque_pop_front_empty_panics.ptt
use std/deque

spark {
  d is Deque of int
  d.pop_front()
}
